Fixed Interfaces - Commission, Client, Consultant, Leave, Timesheet

--- a/TSAR/Views/Timesheets/Delete.cshtml
+++ b/TSAR/Views/Timesheets/Delete.cshtml
@@ -83,7 +83,8 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <a id="button" href="@Url.Action("Index")" class="btn btn-primary">Back To List</a>
+            @*@Html.ActionLink("Back to List", "Index")*@
         </div>
     }
 </div>
