--- a/TSAR/Views/Commissions/Delete.cshtml
+++ b/TSAR/Views/Commissions/Delete.cshtml
@@ -26,8 +26,9 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Delete" class="btn btn-primary" /> |
+            <a id="button" href="@Url.Action("Index")" class="btn btn-primary">Back To List</a>
+            @*@Html.ActionLink("Back to List", "Index")*@
         </div>
     }
 </div>
