--- a/TSAR/Views/Commissions/Edit.cshtml
+++ b/TSAR/Views/Commissions/Edit.cshtml
@@ -18,21 +18,28 @@
         @Html.HiddenFor(model => model.CommissionId)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.CommissionName, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.CommissionName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CommissionName, "", new { @class = "text-danger" })
+            <div align="center">
+                @Html.LabelFor(model => model.CommissionName, htmlAttributes: new { @class = "control-label" })
             </div>
-        </div>
+                <div class="col-md-4 col-md-offset-4">
+                    @Html.EditorFor(model => model.CommissionName, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.CommissionName, "", new { @class = "text-danger" })
+                </div>
+            </div>
 
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+            <div align="center">
+                @*<div class="col-md-offset-2 col-md-10">*@
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </div>
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
+
+<div align="center">
+    <a id="button" href="@Url.Action("Index")" class="btn btn-primary">Back To List</a>
 </div>
+@*<div>
+    @Html.ActionLink("Back to List", "Index")
+</div>*@
