--- a/TSAR/Views/Consultants/Create.cshtml
+++ b/TSAR/Views/Consultants/Create.cshtml
@@ -17,110 +17,132 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.FirstName, "", new { @class = "text-danger" })
+            <div align="center">
+                @Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label" })
+            </div>
+                <div class="col-md-4 col-md-offset-4">
+                    @Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.FirstName, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+        <div class="form-group">
+            <div align="center">
+                @Html.LabelFor(model => model.LastName, htmlAttributes: new { @class = "control-label" })
+            </div>
+                <div class="col-md-4 col-md-offset-4">
+                    @Html.EditorFor(model => model.LastName, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+        <div class="form-group">
+            <div align="center">
+                @Html.LabelFor(model => model.ContactNumber, htmlAttributes: new { @class = "control-label" })
+            </div>
+                <div class="col-md-4 col-md-offset-4">
+                    @Html.EditorFor(model => model.ContactNumber, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.ContactNumber, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+        <div class="form-group">
+            <div align="center">
+                @Html.LabelFor(model => model.ConsultantAddress, htmlAttributes: new { @class = "control-label" })
+            </div>
+                <div class="col-md-4 col-md-offset-4">
+                    @*Google Maps integration*@
+                    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDYt9as2cjmqUnGKD5POvx0xegcT_z40tw&libraries=places"></script>
+                    <script type="text/javascript">
+                        google.maps.event.addDomListener(window,
+                            'load',
+                            function () {
+                                var places = new google.maps.places
+                                    .Autocomplete(document.getElementById('ConsultantAddress'));
+                                google.maps.event.addListener(places,
+                                    'place_changed',
+                                    function () {
+                                        var place = places.getPlace();
+                                        var address = place.formatted_address;
+                                        var latitude = place.geometry.location.lat();
+                                        var longitude = place.geometry.location.lng();
+                                        var mesg = "Address: " + address;
+                                        mesg += "\nLatitude: " + latitude;
+                                        mesg += "\nLongitude: " + longitude;
+
+                                    });
+                            });
+                    </script>
+                    @Html.EditorFor(model => model.ConsultantAddress, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.ConsultantAddress, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+        <div class="form-group">
+            <div align="center">
+                @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label" })
+            </div>
+            <div class="col-md-4 col-md-offset-4">
+                @Html.EditorFor(model => model.Email, new {htmlAttributes = new {@class = "form-control"}})
+                @Html.ValidationMessageFor(model => model.Email, "", new {@class = "text-danger"})
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.LastName, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.LastName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text-danger" })
+            <div align="center">
+                @Html.LabelFor(model => model.ConsultantType, htmlAttributes: new { @class = "control-label" })
             </div>
-        </div>
+                <div class="col-md-4 col-md-offset-4">
+                    @Html.EditorFor(model => model.ConsultantType, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.ConsultantType, "", new { @class = "text-danger" })
+                </div>
+            </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ContactNumber, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ContactNumber, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ContactNumber, "", new { @class = "text-danger" })
+            <div align="center">
+                @Html.LabelFor(model => model.ComissionCode, htmlAttributes: new { @class = "control-label" })
             </div>
-        </div>
+                <div class="col-md-4 col-md-offset-4">
+                    @Html.EditorFor(model => model.ComissionCode, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.ComissionCode, "", new { @class = "text-danger" })
+                </div>
+            </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ConsultantAddress, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @*Google Maps integration*@
-                <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDYt9as2cjmqUnGKD5POvx0xegcT_z40tw&libraries=places"></script>
-                <script type="text/javascript">
-                    google.maps.event.addDomListener(window,
-                        'load',
-                        function() {
-                            var places = new google.maps.places
-                                .Autocomplete(document.getElementById('ConsultantAddress'));
-                            google.maps.event.addListener(places,
-                                'place_changed',
-                                function() {
-                                    var place = places.getPlace();
-                                    var address = place.formatted_address;
-                                    var latitude = place.geometry.location.lat();
-                                    var longitude = place.geometry.location.lng();
-                                    var mesg = "Address: " + address;
-                                    mesg += "\nLatitude: " + latitude;
-                                    mesg += "\nLongitude: " + longitude;
-
-                                });
-                        });
-                </script>
-                @Html.EditorFor(model => model.ConsultantAddress, new {htmlAttributes = new {@class = "form-control"}})
-                @Html.ValidationMessageFor(model => model.ConsultantAddress, "", new {@class = "text-danger"})
+            <div align="center">
+                @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label" })
             </div>
-        </div>
+                <div class="col-md-4 col-md-offset-4">
+                    @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+                </div>
+            </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+            <div align="center">
+                @Html.LabelFor(model => model.RoleType, htmlAttributes: new { @class = "control-label" })
             </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.ConsultantType, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ConsultantType, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ConsultantType, "", new { @class = "text-danger" })
+                <div class="col-md-4 col-md-offset-4">
+                    @Html.EditorFor(model => model.RoleType, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.RoleType, "", new { @class = "text-danger" })
+                </div>
             </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.ComissionCode, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ComissionCode, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ComissionCode, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.RoleType, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.RoleType, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.RoleType, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </div>
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
+
+<div align="center">
+    <a id="button" href="@Url.Action("Index")" class="btn btn-primary">Back To List</a>
 </div>
+@*<div>
+    @Html.ActionLink("Back to List", "Index")
+</div>*@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
