--- a/TSAR/Views/Timesheets/Edit.cshtml
+++ b/TSAR/Views/Timesheets/Edit.cshtml
@@ -19,80 +19,103 @@
         @Html.HiddenFor(model => model.TimesheetId)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.CaptureDate, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.CaptureDate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CaptureDate, "", new { @class = "text-danger" })
+            <div align="center">
+                @Html.LabelFor(model => model.CaptureDate, htmlAttributes: new { @class = "control-label" })
             </div>
-        </div>
+                <div class="col-md-4 col-md-offset-4">
+                    @Html.EditorFor(model => model.CaptureDate, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.CaptureDate, "", new { @class = "text-danger" })
+                </div>
+            </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.StartTime, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.StartTime, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.StartTime, "", new { @class = "text-danger" })
+            <div align="center">
+                @Html.LabelFor(model => model.StartTime, htmlAttributes: new { @class = "control-label" })
+             </div>
+                <div class="col-md-4 col-md-offset-4">
+                    @Html.EditorFor(model => model.StartTime, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.StartTime, "", new { @class = "text-danger" })
+                </div>
             </div>
-        </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.EndTime, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.EndTime, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.EndTime, "", new { @class = "text-danger" })
+            <div align="center">
+                @Html.LabelFor(model => model.EndTime, htmlAttributes: new { @class = "control-label" })
             </div>
-        </div>
+                <div class="col-md-4 col-md-offset-4">
+                    @Html.EditorFor(model => model.EndTime, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.EndTime, "", new { @class = "text-danger" })
+                </div>
+            </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ActivityDescription, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ActivityDescription, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ActivityDescription, "", new { @class = "text-danger" })
+            <div align="center">
+                @Html.LabelFor(model => model.ActivityDescription, htmlAttributes: new { @class = "control-label" })
             </div>
-        </div>
+                <div class="col-md-4 col-md-offset-4">
+                    @Html.EditorFor(model => model.ActivityDescription, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.ActivityDescription, "", new { @class = "text-danger" })
+                </div>
+            </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Total, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Total, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Total, "", new { @class = "text-danger" })
+            <div align="center">
+                @Html.LabelFor(model => model.Total, htmlAttributes: new { @class = "control-label" })
             </div>
-        </div>
+                <div class="col-md-4 col-md-offset-4">
+                    @Html.EditorFor(model => model.Total, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Total, "", new { @class = "text-danger" })
+                </div>
+            </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Hours, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Hours, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Hours, "", new { @class = "text-danger" })
+            <div align="center">
+                @Html.LabelFor(model => model.Hours, htmlAttributes: new { @class = "control-label" })
             </div>
-        </div>
+                <div class="col-md-4 col-md-offset-4">
+                    @Html.EditorFor(model => model.Hours, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Hours, "", new { @class = "text-danger" })
+                </div>
+            </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Id, "Id", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("Id", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.Id, "", new { @class = "text-danger" })
+            <div align="center">
+                @Html.LabelFor(model => model.Id, "Id", htmlAttributes: new { @class = "control-label" })
             </div>
-        </div>
+                <div class="col-md-4 col-md-offset-4">
+                    @Html.DropDownList("Id", null, htmlAttributes: new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.Id, "", new { @class = "text-danger" })
+                </div>
+            </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ConsultantNum, "ConsultantNum", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("ConsultantNum", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.ConsultantNum, "", new { @class = "text-danger" })
+            <div align="center">
+                @Html.LabelFor(model => model.ConsultantNum, "ConsultantNum", htmlAttributes: new { @class = "control-label" })
             </div>
-        </div>
+                <div class="col-md-4 col-md-offset-4">
+                    @Html.DropDownList("ConsultantNum", null, htmlAttributes: new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.ConsultantNum, "", new { @class = "text-danger" })
+                </div>
+            </div>
 
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+            
+            @*<div class="col-md-offset-2 col-md-10">*@
+            <div align="center">
+                <input type="submit" value="Save" class="btn btn-primary" />
+                @*</div>*@
             </div>
-        </div>
+            </div>
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
+
+<div align="center">
+    <a id="button" href="@Url.Action("Index")" class="btn btn-primary">Back To List</a>
 </div>
+@*<div>
+    @Html.ActionLink("Back to List", "Index")
+</div>*@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
