made minor changes

--- a/TSAR/Views/Manage/ManagerMenu.cshtml
+++ b/TSAR/Views/Manage/ManagerMenu.cshtml
@@ -40,6 +40,8 @@
         <td><input type="button" style="height:50px;width:200px" title="View Consultants" value="View Consultant" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "Consultants")'" /></td>
         <td></td>
         <td><input type="button" style="height:50px;width:200px" title="Manage Newsletter" value="Manage Newsletter" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "Newsletter")'" /></td>
+        <td><input type="button" style="height:50px;width:200px" title="Scheduler" value="Scheduler" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "Calendar")'" /></td>
+
     </tr>
     </tbody>
 </table>
