--- a/TSAR/Views/Rating/Create.cshtml
+++ b/TSAR/Views/Rating/Create.cshtml
@@ -80,7 +80,7 @@
 
 <div>
     <div align="center">
-        <a id="button" href="@Url.Action("Index")" class="btn btn-primary">Back to the list</a>
+        @*<a id="button" href="@Url.Action("Index")" class="btn btn-primary">Back to the list</a>*@
     </div>
 </div>
 
