--- a/TSAR/Views/Rating/Index.cshtml
+++ b/TSAR/Views/Rating/Index.cshtml
@@ -9,7 +9,7 @@
 
 <p>
     <div align="center">
-        <a id="button" href="@Url.Action("Create")" class="btn btn-primary">Create</a>
+        @*<a id="button" href="@Url.Action("Create")" class="btn btn-primary">Create</a>*@
     </div>
 </p>
 <table class="table">
