--- a/TSAR/Views/Timesheets/Delete.cshtml
+++ b/TSAR/Views/Timesheets/Delete.cshtml
@@ -21,11 +21,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Consultant.FirstName)
+            @Html.DisplayNameFor(model => model.Consultant.FullName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Consultant.FirstName)
+            @Html.DisplayFor(model => model.Consultant.FullName)
         </dd>
 
         <dt>
