--- a/TSAR/Views/Timesheets/Index.cshtml
+++ b/TSAR/Views/Timesheets/Index.cshtml
@@ -18,7 +18,7 @@
             <font color="white">        @Html.DisplayNameFor(model => model.Client.ClientName)</font>
 </th>
         <th>
-            <font color="white">         @Html.DisplayNameFor(model => model.Consultant.FirstName)</font>
+            <font color="white">         @Html.DisplayNameFor(model => model.Consultant.FullName)</font>
 </th>
         <th>
             <font color="white">     @Html.DisplayNameFor(model => model.CaptureDate)</font>
