--- a/TSAR/Views/Roles/Create.cshtml
+++ b/TSAR/Views/Roles/Create.cshtml
@@ -15,7 +15,7 @@
         Role name
     </div>
     <p>
-        @Html.TextBox("RoleName")
+        <font color="Black">@Html.TextBox("RoleName")</font>
     </p>
-    <input type="submit" value="Save" />
+    <input type="submit" value="Save" class="btn btn-primary"/>
 }
