--- a/TSAR/Views/Timesheets/Edit.cshtml
+++ b/TSAR/Views/Timesheets/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model TSAR.Models.Timesheet
+﻿ @model TSAR.Models.Timesheet
 
 @{
     ViewBag.Title = "Edit";
@@ -80,7 +80,7 @@
 
         <div class="form-group">
             <div align="center">
-                @Html.LabelFor(model => model.Id, "Id", htmlAttributes: new { @class = "control-label" })
+                @Html.LabelFor(model => model.Id, "Client Name", htmlAttributes: new { @class = "control-label" })
             </div>
                 <div class="col-md-4 col-md-offset-4">
                     @Html.DropDownList("Id", null, htmlAttributes: new { @class = "form-control" })
@@ -90,7 +90,7 @@
 
         <div class="form-group">
             <div align="center">
-                @Html.LabelFor(model => model.ConsultantNum, "ConsultantNum", htmlAttributes: new { @class = "control-label" })
+                @Html.LabelFor(model => model.ConsultantNum, "Consultant Name", htmlAttributes: new { @class = "control-label" })
             </div>
                 <div class="col-md-4 col-md-offset-4">
                     @Html.DropDownList("ConsultantNum", null, htmlAttributes: new { @class = "form-control" })
