--- a/TSAR/Views/Budget/Index.cshtml
+++ b/TSAR/Views/Budget/Index.cshtml
@@ -35,12 +35,12 @@
             </td>
             <td>
 
-                <input type="button" title="Edit" value="Edit" class="btn btn-primary" onclick="location.href='@Url.Action("Edit", "Clients", new { id = item.BudgetCode })'" />
+                <input type="button" title="Edit" value="Edit" class="btn btn-primary" onclick="location.href='@Url.Action("Edit", "Budget", new { id = item.BudgetCode })'" />
 
 
-                <input type="button" title="Edit" value="Details" class="btn btn-primary" onclick="location.href='@Url.Action("Details", "Clients", new { id = item.BudgetCode })'" />
+                <input type="button" title="Edit" value="Details" class="btn btn-primary" onclick="location.href='@Url.Action("Details", "Budget", new { id = item.BudgetCode })'" />
 
-                <input type="button" title="Delete" value="Delete" class="btn btn-primary" onclick="location.href='@Url.Action("Delete", "Clients", new { id = item.BudgetCode })'" />
+                <input type="button" title="Delete" value="Delete" class="btn btn-primary" onclick="location.href='@Url.Action("Delete", "Budget", new { id = item.BudgetCode })'" />
 
             </td>
         </tr>
