--- a/TSAR/Views/Commissions/Index.cshtml
+++ b/TSAR/Views/Commissions/Index.cshtml
@@ -34,12 +34,12 @@
             </td>
             <td>
 
-                <input type="button" title="Edit" value="Edit" class="btn btn-primary" onclick="location.href='@Url.Action("Edit", "Clients", new { id = item.CommissionId })'" />
+                <input type="button" title="Edit" value="Edit" class="btn btn-primary" onclick="location.href='@Url.Action("Edit", "Commissions", new { id = item.CommissionId })'" />
 
 
-                <input type="button" title="Edit" value="Details" class="btn btn-primary" onclick="location.href='@Url.Action("Details", "Clients", new { id = item.CommissionId })'" />
+                <input type="button" title="Edit" value="Details" class="btn btn-primary" onclick="location.href='@Url.Action("Details", "Commissions", new { id = item.CommissionId })'" />
 
-                <input type="button" title="Delete" value="Delete" class="btn btn-primary" onclick="location.href='@Url.Action("Delete", "Clients", new { id = item.CommissionId })'" />
+                <input type="button" title="Delete" value="Delete" class="btn btn-primary" onclick="location.href='@Url.Action("Delete", "Commissions", new { id = item.CommissionId })'" />
 
             </td>
         </tr>
