--- a/TSAR/Views/Consultants/Index.cshtml
+++ b/TSAR/Views/Consultants/Index.cshtml
@@ -87,13 +87,13 @@
                 <font color="gold"> @Html.DisplayFor(modelItem => item.RoleType)</font>
             </td>
             <td>
-                <input type="button" title="Edit" value="Edit" class="btn btn-primary" onclick="location.href='@Url.Action("Edit", "Clients", new { id = item.ConsultantNum })'" />
+                <input type="button" title="Edit" value="Edit" class="btn btn-primary" onclick="location.href='@Url.Action("Edit", "Consultants", new { id = item.ConsultantNum })'" />
             </td>
             <td>
-                <input type="button" title="Edit" value="Details" class="btn btn-primary" onclick="location.href='@Url.Action("Details", "Clients", new { id = item.ConsultantNum })'" />
+                <input type="button" title="Edit" value="Details" class="btn btn-primary" onclick="location.href='@Url.Action("Details", "Consultants", new { id = item.ConsultantNum })'" />
             </td>
             <td>
-                <input type="button" title="Delete" value="Delete" class="btn btn-primary" onclick="location.href='@Url.Action("Delete", "Clients", new { id = item.ConsultantNum })'" />
+                <input type="button" title="Delete" value="Delete" class="btn btn-primary" onclick="location.href='@Url.Action("Delete", "Consultants", new { id = item.ConsultantNum })'" />
             </td>
 
         </tr>
