--- a/TSAR/Views/ManageTravel/Index.cshtml
+++ b/TSAR/Views/ManageTravel/Index.cshtml
@@ -54,12 +54,12 @@
             </td>
             <td>
             <td>
-                <input type="button" title="Edit" value="Edit" class="btn btn-primary" onclick="location.href='@Url.Action("Edit", "Clients", new { id = item.TravelCode })'" />
+                <input type="button" title="Edit" value="Edit" class="btn btn-primary" onclick="location.href='@Url.Action("Edit", "ManageTravel", new { id = item.TravelCode })'" />
 
 
-                <input type="button" title="Edit" value="Details" class="btn btn-primary" onclick="location.href='@Url.Action("Details", "Clients", new { id = item.TravelCode })'" />
+                <input type="button" title="Edit" value="Details" class="btn btn-primary" onclick="location.href='@Url.Action("Details", "ManageTravel", new { id = item.TravelCode })'" />
 
-                <input type="button" title="Delete" value="Delete" class="btn btn-primary" onclick="location.href='@Url.Action("Delete", "Clients", new { id = item.TravelCode })'" />
+                <input type="button" title="Delete" value="Delete" class="btn btn-primary" onclick="location.href='@Url.Action("Delete", "ManageTravel", new { id = item.TravelCode })'" />
             </td>
             </td>
         </tr>
