Edited Rating and Ticket Views

--- a/TSAR/Views/Rating/Create.cshtml
+++ b/TSAR/Views/Rating/Create.cshtml
@@ -77,13 +77,14 @@
         </div>
     </div>
 }
-
-<div>
-    <div align="center">
-        @*<a id="button" href="@Url.Action("Index")" class="btn btn-primary">Back to the list</a>*@
+@if (User.IsInRole("Admin"))
+{
+    <div>
+        <div align="center">
+            <a id="button" href="@Url.Action("Index")" class="btn btn-primary">Back to the list</a>
+        </div>
     </div>
-</div>
-
+}
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 
