--- a/TSAR/Views/Tickets/Create.cshtml
+++ b/TSAR/Views/Tickets/Create.cshtml
@@ -66,10 +66,12 @@
     </div>
 }
 
-<div>
-    @*@Html.ActionLink("Back to List", "Index")*@
-</div>
-
+@if (User.IsInRole("Admin"))
+{
+    <div>
+        @Html.ActionLink("Back to List", "Index")
+    </div>
+}
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
