Fixed interfaces - Files, Manage Travel, Newsletter, Rating, Login

--- a/TSAR/Views/ManageTravel/Create.cshtml
+++ b/TSAR/Views/ManageTravel/Create.cshtml
@@ -56,9 +56,12 @@
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
+<div align="center">
+    <a id="button" href="@Url.Action("Index")" class="btn btn-primary">Back To List</a>
 </div>
+@*<div>
+    @Html.ActionLink("Back to List", "Index")
+</div>*@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
