--- a/TSAR/Views/Newsletter/Delete.cshtml
+++ b/TSAR/Views/Newsletter/Delete.cshtml
@@ -27,7 +27,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Unsubscribe" class="btn btn-default" /> |
+            <input type="submit" value="Unsubscribe" class="btn btn-primary" /> |
             @Html.ActionLink("Back Active subscription", "Index")
         </div>
     }
