--- a/TSAR/Views/Account/Login.cshtml
+++ b/TSAR/Views/Account/Login.cshtml
@@ -11,25 +11,30 @@
             {
                 @Html.AntiForgeryToken()
 
+
                 <h2 class="col-lg-12 text-center">Log In</h2>
                 <hr />
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="form-group">
-                    @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-                    <div class="col-md-10">
-                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+                    <div align="center">
+                        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
                     </div>
-                </div>
-                <div class="form-group">
-                    @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-                    <div class="col-md-10">
-                        @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
+                        <div class="col-md-4 col-md-offset-4">
+                            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+                        </div>
                     </div>
-                </div>
                 <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
+                    <div align="center">
+                        @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
+                    </div>
+                        <div class="col-md-4 col-md-offset-4">
+                            @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                <div class="form-group">
+                    <div class="col-md-4 col-md-offset-4">
                         <div class="checkbox">
                             @Html.CheckBoxFor(m => m.RememberMe)
                             @Html.LabelFor(m => m.RememberMe)
@@ -37,13 +42,17 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
+                    <div class="col-md-4 col-md-offset-4">
                         <input type="submit" value="Log in" class="btn btn-primary" />
                     </div>
                 </div>
-                <h2 class="col-lg-12 text-center">
+
+                <div align="center">
+                    <a id="button" href="@Url.Action("Register")" class="btn btn-primary">Register as a new user</a>
+                </div>
+                @*<h2 class="col-lg-12 text-center">
                     @Html.ActionLink("Register as a new user", "Register")
-                </h2>
+                </h2>*@
                 @* Enable this once you have account confirmation enabled for password reset functionality
                     <p>
                         @Html.ActionLink("Forgot your password?", "ForgotPassword")
