--- a/TSAR/Views/Files/Create.cshtml
+++ b/TSAR/Views/Files/Create.cshtml
@@ -13,14 +13,18 @@
         <div class="form-group">
             <p><input type="file" id="file" name="file" /></p>
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Upload" class="btn btn-default" />
+                <input type="submit" value="Upload" class="btn btn-primary" />
             </div>
         </div>
     </fieldset>
 }
-<div>
-    @Html.ActionLink("Back to List", "Index")
+
+<div align="center">
+    <a id="button" href="@Url.Action("Index")" class="btn btn-primary">Back To List</a>
 </div>
+@*<div>
+    @Html.ActionLink("Back to List", "Index")
+</div>*@
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
