--- a/TSAR/Views/Files/Edit.cshtml
+++ b/TSAR/Views/Files/Edit.cshtml
@@ -15,38 +15,48 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.FileId)
         <div class="form-group">
-            @Html.LabelFor(model => model.FileName, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            <div align="center">
+                @Html.LabelFor(model => model.FileName, htmlAttributes: new { @class = "control-label" })
+            </div>
+            <div class="col-md-4 col-md-offset-4">
                 @Html.DisplayFor(model => model.FileName)
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.FileType, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @*@Html.EnumDropDownListFor(model => model.FileType, htmlAttributes: new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.FileType, "", new { @class = "text-danger" })*@
-                @Html.DisplayFor(model => model.FileType)
+            <div align="center">
+                @Html.LabelFor(model => model.FileType, htmlAttributes: new { @class = "control-label" })
             </div>
-        </div>
+                <div class="col-md-4 col-md-offset-4">
+                    @*@Html.EnumDropDownListFor(model => model.FileType, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.FileType, "", new { @class = "text-danger" })*@
+                    @Html.DisplayFor(model => model.FileType)
+                </div>
+            </div>
         <div class="form-group">
-            @*@Html.LabelFor(model => model.Content, htmlAttributes: new { @class = "control-label col-md-2" })*@
-            @Html.Label("Upload New File", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            <div align="center">
+                @*@Html.LabelFor(model => model.Content, htmlAttributes: new { @class = "control-label col-md-2" })*@
+                @Html.Label("Upload New File", htmlAttributes: new { @class = "control-label" })
+            </div>
+            <div class="col-md-4 col-md-offset-4">
                 @*@Html.EditorFor(model => model.Content, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.Content, "", new { @class = "text-danger" })*@
-                <input type="file" id="file" name="file" />
+                <input type="file" id="file" name="file"/>
             </div>
         </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </div>
     </div>
 }
-<div>
-    @Html.ActionLink("Back to List", "Index")
+
+<div align="center">
+    <a id="button" href="@Url.Action("Index")" class="btn btn-primary">Back To List</a>
 </div>
+@*<div>
+    @Html.ActionLink("Back to List", "Index")
+</div>*@
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
