--- a/TSAR/Views/Newsletter/Create.cshtml
+++ b/TSAR/Views/Newsletter/Create.cshtml
@@ -17,9 +17,11 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div  class="col-md-6">
-              
+            <div align="center">
+                @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label" })
+            </div>
+            <div class="col-md-6">
+
                 @Html.EditorFor(model => model.Email, new {htmlAttributes = new {@class = "form-control"}})
                 @Html.ValidationMessageFor(model => model.Email, "", new {@class = "text-danger"})
             </div>
@@ -27,15 +29,18 @@
 
         <div class="form-group">
             <div class="col-md-11" align="center">
-                <input type="submit" value="Subscribe" class="btn btn-default" />
+                <input type="submit" value="Subscribe" class="btn btn-primary" />
             </div>
         </div>
     </div>
 }
 
-<div class="col-md-11" align="center">
-    @Html.ActionLink("If you have an active subscription click here.","Index")
+<div align="center">
+    <a id="button" href="@Url.Action("Index")" class="btn btn-primary">If you have an active subscription click here</a>
 </div>
+@*<div class="col-md-11" align="center">
+    @Html.ActionLink("If you have an active subscription click here.","Index")
+</div>*@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
