Fixed Tickets and Rating

--- a/TSAR/Views/Rating/Details.cshtml
+++ b/TSAR/Views/Rating/Details.cshtml
@@ -12,11 +12,11 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Consultant.FullName)
+            @Html.DisplayNameFor(model => model.ConsultantName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Consultant.FullName)
+            @Html.DisplayFor(model => model.ConsultantName)
         </dd>
 
         <dt>
@@ -36,11 +36,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.ClientName)
+            @Html.DisplayNameFor(model => model.ClientUsername)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.ClientName)
+            @Html.DisplayFor(model => model.ClientUsername)
         </dd>
 
     </dl>
