--- a/TSAR/Views/Tickets/Edit.cshtml
+++ b/TSAR/Views/Tickets/Edit.cshtml
@@ -33,7 +33,14 @@
                 @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
             </div>
         </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Category, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-6">
 
+                @Html.DropDownListFor(model => model.Category, new List<SelectListItem> { new SelectListItem { Text = "Email", Value = "Email" }, new SelectListItem() { Text = "Hardware", Value = "Hardware" }, new SelectListItem() { Text = "Maintenance", Value = "Maintenance" }, new SelectListItem() { Text = "Network", Value = "Network" }, new SelectListItem() { Text = "Printer", Value = "Printer" }, new SelectListItem() { Text = "Software", Value = "Software" }, new SelectListItem() { Text = "Other", Value = "Other" } }, "---Select a category---", new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Category, "", new { @class = "text-danger" })
+            </div>
+        </div>
         <div class="form-group">
             @Html.LabelFor(model => model.FaultDescription, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -46,8 +53,8 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Priority, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-6">
-                @*@Html.EditorFor(model => model.Priority, new { htmlAttributes = new { @class = "form-control" } })*@
-                @Html.DropDownListFor(model => model.Priority, new List<SelectListItem> { new SelectListItem { Text = "Low", Value = "Low" }, new SelectListItem() { Text = "Medium", Value = "Medium" }, new SelectListItem() { Text = "High", Value = "High" } }, "---Select---", new { @class = "form-control" })
+                @Html.EditorFor(model => model.Priority, new { htmlAttributes = new { @class = "form-control" } })
+                @*@Html.DropDownListFor(model => model.Priority, new List<SelectListItem> { new SelectListItem { Text = "Low", Value = "Low" }, new SelectListItem() { Text = "Medium", Value = "Medium" }, new SelectListItem() { Text = "High", Value = "High" } }, "---Select---", new { @class = "form-control" })*@
                 @Html.ValidationMessageFor(model => model.Priority, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -59,7 +66,28 @@
                 @Html.ValidationMessageFor(model => model.Date, "", new { @class = "text-danger" })
             </div>
         </div>
-
+        <div class="form-group">
+            @Html.LabelFor(model => model.ConsultantName, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.ConsultantName, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.ConsultantName, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Category, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Category, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Category, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Status, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Status, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Status, "", new { @class = "text-danger" })
+            </div>
+        </div>
+      
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Save" class="btn btn-default" />
