--- a/TSAR/Views/Rating/Create.cshtml
+++ b/TSAR/Views/Rating/Create.cshtml
@@ -18,40 +18,41 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @*<div class="form-group">
-            <div align="center">
-                @Html.LabelFor(model => model.ClientName, htmlAttributes: new { @class = "control-label" })
-            </div>
-            <div class="col-md-offset-5 col-md-2">
-                @Html.EditorFor(model => model.ClientName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ClientName, "", new { @class = "text-danger" })
-            </div>
-        </div>*@
-        <div class="form-group">
-            <div align="center">
-                @Html.LabelFor(model => model.ConsultantNum, "Consultant Name", htmlAttributes: new { @class = "control-label" })
-            </div>
-            <div class="col-md-offset-5 col-md-2">
-                @Html.DropDownList("ConsultantNum", null, "--Select Name--", htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.ConsultantNum, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                <div align="center">
+                    @Html.LabelFor(model => model.ClientName, htmlAttributes: new { @class = "control-label" })
+                </div>
+                <div class="col-md-offset-5 col-md-2">
+                    @Html.EditorFor(model => model.ClientName, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.ClientName, "", new { @class = "text-danger" })
+                </div>
+            </div>*@
+        @*<div class="form-group">
+                <div align="center">
+                    @Html.LabelFor(model => model.ConsultantNum, "Consultant Name", htmlAttributes: new { @class = "control-label" })
+                </div>
+                <div class="col-md-offset-5 col-md-2">
+                    @Html.DropDownList("ConsultantNum", null, "--Select Name--", htmlAttributes: new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.ConsultantNum, "", new { @class = "text-danger" })
+                </div>
+            </div>*@
 
         <div class="form-group">
             <div align="center">
                 @Html.LabelFor(model => model.Rate, htmlAttributes: new { @class = "control-label" })
             </div>
-            <div align="center">
-                <span class="starRating" align="center">
-                    @Html.RadioButtonFor(model => model.Rate, "5", htmlAttributes: new { @id = "rating5", @name = "rating",@Value="5" })
-                    <label for="rating5" >5</label>
-                    @Html.RadioButtonFor(model => model.Rate, "4", htmlAttributes: new { @id = "rating4",  @name = "rating", @Value = "4" })
-                    <label for="rating4" >4</label>
+            <div class="demonstration" align="center">
+                <span class="starRating">
+
+                    @Html.RadioButtonFor(model => model.Rate, "5", htmlAttributes: new { @id = "rating5", @name = "rating", @Value = "5" })
+                    <label for="rating5">5</label>
+                    @Html.RadioButtonFor(model => model.Rate, "4", htmlAttributes: new { @id = "rating4", @name = "rating", @Value = "4" })
+                    <label for="rating4">4</label>
                     @Html.RadioButtonFor(model => model.Rate, "3", htmlAttributes: new { @id = "rating3", @name = "rating", @Value = "3" })
-                    <label for="rating3" >3</label>
+                    <label for="rating3">3</label>
                     @Html.RadioButtonFor(model => model.Rate, "2", htmlAttributes: new { @id = "rating2", @name = "rating", @Value = "2" })
-                    <label for="rating2" >2</label>
+                    <label for="rating2">2</label>
                     @Html.RadioButtonFor(model => model.Rate, "1", htmlAttributes: new { @id = "rating1", @name = "rating", @Value = "1" })
-                    <label for="rating1" >1</label>
+                    <label for="rating1">1</label>
                 </span>
                 @Html.ValidationMessageFor(model => model.Rate, "", new { @class = "text-danger" })
             </div>
@@ -63,12 +64,12 @@
                 @Html.LabelFor(model => model.Comment, htmlAttributes: new { @class = "control-label" })
             </div>
             <div class="col-md-offset-5 col-md-2">
-                @Html.TextAreaFor(model => model.Comment, new { @class = "form-control" } )
+                @Html.TextAreaFor(model => model.Comment, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Comment, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        
+
 
         <div class="form-group">
             <div align="center">
