--- a/TSAR/Views/Rating/Delete.cshtml
+++ b/TSAR/Views/Rating/Delete.cshtml
@@ -13,11 +13,11 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Consultant.FullName)
+            @Html.DisplayNameFor(model => model.ConsultantName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Consultant.FullName)
+            @Html.DisplayFor(model => model.ConsultantName)
         </dd>
 
         <dt>
@@ -37,11 +37,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.ClientName)
+            @Html.DisplayNameFor(model => model.ClientUsername)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.ClientName)
+            @Html.DisplayFor(model => model.ClientUsername)
         </dd>
 
     </dl>
