--- a/TSAR/Views/Rating/Edit.cshtml
+++ b/TSAR/Views/Rating/Edit.cshtml
@@ -20,20 +20,20 @@
         
         <div class="form-group">
             <div align="center">
-                @Html.LabelFor(model => model.ClientName, htmlAttributes: new { @class = "control-label" })
+                @Html.LabelFor(model => model.ClientUsername, htmlAttributes: new { @class = "control-label" })
             </div>
             <div class="col-md-offset-5 col-md-2">
-                @Html.EditorFor(model => model.ClientName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ClientName, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.ClientUsername, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.ClientUsername, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
             <div align="center">
-                @Html.LabelFor(model => model.ConsultantNum, "Consultant Name", htmlAttributes: new { @class = "control-label" })
+                @Html.LabelFor(model => model.ConsultantName, "Consultant Name", htmlAttributes: new { @class = "control-label" })
             </div>
             <div class="col-md-offset-5 col-md-2">
                 @Html.DropDownList("ConsultantNum", null, "--Select Name--", htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.ConsultantNum, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.ConsultantName, "", new { @class = "text-danger" })
             </div>
         </div>
 
