--- a/TSAR/Views/Tickets/Create.cshtml
+++ b/TSAR/Views/Tickets/Create.cshtml
@@ -17,19 +17,27 @@
         <h4>Ticket</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
+        @*<div class="form-group">
             @Html.LabelFor(model => model.ClientName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-6">
                 @Html.EditorFor(model => model.ClientName, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.ClientName, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
 
-        <div class="form-group">
+        @*<div class="form-group">
             @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-6">
                 @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control", @Value = @User.Identity.GetUserName() } })
                 @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+            </div>
+        </div>*@
+        <div class="form-group">
+            @Html.LabelFor(model => model.Category, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-6">
+
+                @Html.DropDownListFor(model => model.Category, new List<SelectListItem> { new SelectListItem { Text = "Email", Value = "Email" }, new SelectListItem() { Text = "Hardware", Value = "Hardware" }, new SelectListItem() { Text = "Maintenance", Value = "Maintenance" }, new SelectListItem() { Text = "Network", Value = "Network" }, new SelectListItem() { Text = "Printer", Value = "Printer" }, new SelectListItem() { Text = "Software", Value = "Software" }, new SelectListItem() { Text = "Other", Value = "Other" } }, "---Select a category---", new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Category, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -41,22 +49,22 @@
             </div>
         </div>
 
-        <div class="form-group">
+        @*<div class="form-group">
             @Html.LabelFor(model => model.Priority, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-6">
-                @*@Html.EditorFor(model => model.Priority, new { htmlAttributes = new { @class = "form-control" } })*@
+                @Html.EditorFor(model => model.Priority, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.DropDownListFor(model => model.Priority, new List<SelectListItem> { new SelectListItem { Text = "Low", Value = "Low" }, new SelectListItem() { Text = "Medium", Value = "Medium" }, new SelectListItem() { Text = "High", Value = "High" } }, "---Select---", new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Priority, "", new { @class = "text-danger" })
             </div>
-        </div>
-
-        <div class="form-group">
+        </div>*@
+     
+        @*<div class="form-group">
             @Html.LabelFor(model => model.Date, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-6">
                 @Html.EditorFor(model => model.Date, new { htmlAttributes = new { @class = "form-control", @Value = DateTime.Now } })
                 @Html.ValidationMessageFor(model => model.Date, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
 
         <div class="form-group">
             <div class="col-md-11" align="center">
