--- a/TSAR/Views/Budget/Create.cshtml
+++ b/TSAR/Views/Budget/Create.cshtml
@@ -20,11 +20,20 @@
 
         <div class="form-group">
             <div align="center">
-                @Html.LabelFor(model => model.Id,"Client Name", htmlAttributes: new { @class = "control-label" })
+                @Html.LabelFor(model => model.Id, "Client Name", htmlAttributes: new { @class = "control-label" })
             </div>
             <div class="col-md-offset-5 col-md-2">
                 @Html.DropDownList("Id", null, "--Select new--", htmlAttributes: new { @class = "form-control", style = "text-transform:uppercase;" })
                 @Html.ValidationMessageFor(model => model.Id, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            <div align="center">
+                @Html.LabelFor(model => model.Code, htmlAttributes: new { @class = "control-label" })
+            </div>
+            <div class="col-md-offset-5 col-md-2">
+                @Html.EditorFor(model => model.Code, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Code, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -38,12 +47,12 @@
             </div>
         </div>
     </div>
-        <div class="form-group">
-            <div align="center">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-
+    <div class="form-group">
+        <div align="center">
+            <input type="submit" value="Create" class="btn btn-primary" />
         </div>
+
+    </div>
 }
 
 <div>
