--- a/TSAR/Views/Budget/Details.cshtml
+++ b/TSAR/Views/Budget/Details.cshtml
@@ -18,7 +18,13 @@
         <dd>
             @Html.DisplayFor(model => model.Client.ClientName)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Code)
+        </dt>
 
+        <dd>
+            @Html.DisplayFor(model => model.Code)
+        </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Balance)
         </dt>
