--- a/TSAR/Views/Home/Contact.cshtml
+++ b/TSAR/Views/Home/Contact.cshtml
@@ -12,9 +12,38 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">Contact Us</h2>
-                <h3 class="section-subheading text-muted">Send us a message</h3>
+
             </div>
         </div>
+        <div align="center">
+            Our Details
+            <p>
+                <i class="fa fa-map-marker"></i>
+            </p>
+            Unit 6, <br>
+            WaterHouse,
+
+            <br>
+
+            20 Nollsworth Crescent,<br>
+            Nollsworth Park, <br>
+            La Lucia Ridge Office Estate <p></p>
+
+            Email :<p><i class="fa fa-envelope"></i></p>info@tsar.co.za<p></p>
+            Telephone Number : <p><i class="fa fa-phone"></i></p>0861 872727<p></p>
+            <div>
+                Our Business Hours:
+                <p></p>Monday - Friday : <span>8AM to 5PM</span><p></p>
+                <p></p>
+
+            </div>
+
+        </div>
+        <br />
+        <br />
+        <h3>Send us a message</h3>
+        <br />
+        <br />
         <div class="row">
             <div class="col-lg-12">
                 <form name="sentMessage" id="contactForm" novalidate>
@@ -22,19 +51,19 @@
                         <div class="col-md-6">
                             <div class="form-group">
                                 @*<input type="text" class="form-control" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name.">*@
-                                @Html.TextBoxFor(m => m.FromName, new {@class = "form-control", placeholder = "Your Name *"})
+                                @Html.TextBoxFor(m => m.FromName, new { @class = "form-control", placeholder = "Your Name *" })
                                 <p class="help-block text-danger">@Html.ValidationMessageFor(m => m.FromName)</p>
                                 <p class="help-block text-danger"></p>
                             </div>
                             <div class="form-group">
                                 @*<input type="email" class="form-control" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address.">*@
-                                @Html.TextBoxFor(m => m.FromEmail, new {@class = "form-control", placeholder = "Your Email *"})
+                                @Html.TextBoxFor(m => m.FromEmail, new { @class = "form-control", placeholder = "Your Email *" })
                                 <p class="help-block text-danger">@Html.ValidationMessageFor(m => m.FromEmail)</p>
                                 <p class="help-block text-danger"></p>
                             </div>
                             <div class="form-group">
                                 @*<input type="tel" class="form-control" placeholder="Your Phone *" id="phone" required data-validation-required-message="Please enter your phone number.">*@
-                                @Html.TextBoxFor(m => m.Phone, new {@class = "form-control", placeholder = "Your Phone *"})
+                                @Html.TextBoxFor(m => m.Phone, new { @class = "form-control", placeholder = "Your Phone *" })
                                 <p class="help-block text-danger">@Html.ValidationMessageFor(m => m.Phone)</p>
                                 <p class="help-block text-danger"></p>
                             </div>
@@ -42,7 +71,7 @@
                         <div class="col-md-6">
                             <div class="form-group">
                                 @*  <textarea class="form-control" placeholder="Your Message *" id="message" required data-validation-required-message="Please enter a message."></textarea>*@
-                                @Html.TextAreaFor(m => m.Message, new {@class = "form-control", placeholder = "Your Message *"})
+                                @Html.TextAreaFor(m => m.Message, new { @class = "form-control", placeholder = "Your Message *" })
                                 <p class="help-block text-danger">@Html.ValidationMessageFor(m => m.Message)</p>
                                 @*<p class="help-block text-danger"></p>*@
 
