--- a/TSAR/Views/Clients/Delete.cshtml
+++ b/TSAR/Views/Clients/Delete.cshtml
@@ -13,22 +13,12 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.ManageTravel.TravelCode)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ManageTravel.TravelCode)
-        </dd>
-
-        <dt>
             @Html.DisplayNameFor(model => model.ClientName)
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.ClientName)
         </dd>
-
-      
 
         <dt>
             @Html.DisplayNameFor(model => model.ClientAddress)
@@ -39,11 +29,26 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.ClientAddress2)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.ClientAddress2)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.ContactNumber)
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.ContactNumber)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.ContactNumber2)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.ContactNumber2)
         </dd>
 
         <dt>
@@ -54,6 +59,15 @@
             @Html.DisplayFor(model => model.Email)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.Email2)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Email2)
+        </dd>
+
+
 
 
         <dt>
@@ -63,7 +77,22 @@
         <dd>
             @Html.DisplayFor(model => model.ProjectLeader)
         </dd>
-       
+
+        <dt>
+            @Html.DisplayNameFor(model => model.ManageTravel.TravelCode)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.ManageTravel.TravelCode)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.TravelCode2)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.TravelCode2)
+        </dd>
+
 
     </dl>
 
@@ -78,3 +107,4 @@
         </div>
     }
 </div>
+
