--- a/TSAR/Views/Clients/Edit.cshtml
+++ b/TSAR/Views/Clients/Edit.cshtml
@@ -28,7 +28,7 @@
             </div>
         </div>
 
-      
+
 
         <div class="form-group">
             <div align="center">
@@ -37,6 +37,15 @@
             <div class="col-md-4 col-md-offset-4">
                 @Html.EditorFor(model => model.ClientAddress, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.ClientAddress, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            <div align="center">
+                @Html.LabelFor(model => model.ClientAddress2, htmlAttributes: new { @class = "control-label" })
+            </div>
+            <div class="col-md-4 col-md-offset-4">
+                @Html.EditorFor(model => model.ClientAddress2, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.ClientAddress2, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -49,7 +58,15 @@
                 @Html.ValidationMessageFor(model => model.ContactNumber, "", new { @class = "text-danger" })
             </div>
         </div>
-
+        <div class="form-group">
+            <div align="center">
+                @Html.LabelFor(model => model.ContactNumber2, htmlAttributes: new { @class = "control-label" })
+            </div>
+            <div class="col-md-4 col-md-offset-4">
+                @Html.EditorFor(model => model.ContactNumber2, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.ContactNumber2, "", new { @class = "text-danger" })
+            </div>
+        </div>
         <div class="form-group">
             <div align="center">
                 @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label" })
@@ -59,7 +76,15 @@
                 @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
             </div>
         </div>
-
+        <div class="form-group">
+            <div align="center">
+                @Html.LabelFor(model => model.Email2, htmlAttributes: new { @class = "control-label" })
+            </div>
+            <div class="col-md-4 col-md-offset-4">
+                @Html.EditorFor(model => model.Email2, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Email2, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
 
         <div class="form-group">
@@ -98,8 +123,8 @@
     <a id="button" href="@Url.Action("Index")" class="btn btn-primary">Back To List</a>
 </div>
 @*<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>*@
+        @Html.ActionLink("Back to List", "Index")
+    </div>*@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
