--- a/TSAR/Views/Tickets/Review.cshtml
+++ b/TSAR/Views/Tickets/Review.cshtml
@@ -66,23 +66,39 @@
             </div>
         </div>
 
-        <div class="form-group"  type="hidden">
-            @*@Html.LabelFor(model => model.ConsultantName, htmlAttributes: new { @class = "control-label col-md-2"})*@
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ConsultantName, new { htmlAttributes = new { @class = "form-control", @type = "hidden" } })
-                @*@Html.ValidationMessageFor(model => model.ConsultantName, "", new { @class = "text-danger" })*@
-            </div>
+    <div class="form-group"  type="hidden">
+        @*@Html.LabelFor(model => model.ConsultantName, htmlAttributes: new { @class = "control-label col-md-2"})*@
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.ConsultantName, new { htmlAttributes = new { @class = "form-control", @type = "hidden" } })
+            @*@Html.ValidationMessageFor(model => model.ConsultantName, "", new { @class = "text-danger" })*@
         </div>
+    </div>
+
+    <div class="form-group" type="hidden">
+        @*@Html.LabelFor(model => model.Status, htmlAttributes: new { @class = "control-label col-md-2"})*@
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Status, new { htmlAttributes = new { @class = "form-control", @type = "hidden" } })
+            @*@Html.ValidationMessageFor(model => model.Status, "", new { @class = "text-danger" })*@
+        </div>
+    </div>
+
         <div class="form-group" type="hidden">
             @*@Html.LabelFor(model => model.Status, htmlAttributes: new { @class = "control-label col-md-2"})*@
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Status, new { htmlAttributes = new { @class = "form-control", @type = "hidden" } })
+                @Html.EditorFor(model => model.ConsultantId, new { htmlAttributes = new { @class = "form-control", @type = "hidden" } })
                 @*@Html.ValidationMessageFor(model => model.Status, "", new { @class = "text-danger" })*@
             </div>
         </div>
+                <div class="form-group" type="hidden">
+                    @*@Html.LabelFor(model => model.Status, htmlAttributes: new { @class = "control-label col-md-2"})*@
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.TicketReference, new { htmlAttributes = new { @class = "form-control", @type = "hidden" } })
+                        @*@Html.ValidationMessageFor(model => model.Status, "", new { @class = "text-danger" })*@
+                    </div>
+                </div>
         <div class="form-group">
             <div align="center">
-                <input type="submit" value="Yes" class="btn btn-primary"href="@Url.Action("Index")" />
+                <input type="submit" value="Yes" class="btn btn-primary"href="@Url.Action("MyTickets")" />
                 <a id="button" href="@Url.Action("Index")" class="btn btn-primary">No</a>
             </div>
         </div>
